--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rádio M3U</title>
   <link rel="manifest" href="manifest.json" />
-  <link rel="apple-touch-icon" href="icon.png" />
+  <link rel="apple-touch-icon" href="image/icon.png" />
+  <link rel="icon" href="image/favicon.ico" type="image/x-icon">
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <style>
     body {
@@ -100,9 +101,6 @@
           title: select.options[select.selectedIndex].text,
           artist: 'Rádio Web',
           album: 'M3U Player',
-          artwork: [
-            { src: 'icon.png', sizes: '512x512', type: 'image/png' }
-          ]
         });
       }
     }
