--- a/index.html
+++ b/index.html
@@ -73,9 +73,15 @@
   <div class="container">
     <h1>🎧 Rádio M3U</h1>
     <select id="stationSelect">
-      <option value="https://player.ipstm.net/proxy/32224">Metalcore</option>
       <option value="https://stream.geracao.live/listen/rock/stream">Geração Rock</option>
       <option value="https://centova.euroti.com.br:20015/stream">Rádio Exmera</option>
+      <option value="https://playerservices.streamtheworld.com/api/livestream-redirect/RADIO_ALPHAFM_ADP.aac">Alpha FM</option>
+      <option value="https://playerservices.streamtheworld.com/api/livestream-redirect/RADIO_89FM_ADP.aac">Rádio 89 FM Rock</option>
+      <option value="https://player.ipstm.net/proxy/32224">Metal Zone Radio</option>
+      <option value="https://skywatcherawakenedradio.radiolebowski.com/play">Trap Radio</option>
+      <option value="http://serv.coreradio.online:8000/coreradio">Core Radio</option>
+      <option value="http://streams.radiobob.de/metalcore/mp3-128">RADIO BOB - Metalcore</option>
+      <option value="https://rrdns-dumont.webnow.com.br/dumont.aac">Dumont FM - 104.3</option>
     </select>
     
     <button id="playPauseBtn">⏸️ Pausar</button>
