--- a/index.html
+++ b/index.html
@@ -99,31 +99,33 @@
     const buffering = document.getElementById('buffering');
     let reconnectTimeout;
     let bufferTimeout;
-    const BUFFER_TIME = 10000; // 10 segundos de buffer
+    const BUFFER_TIME = 10000;
+    let isManuallyPaused = false;
 
     function updateMetadata() {
       if ('mediaSession' in navigator) {
         navigator.mediaSession.metadata = new MediaMetadata({
           title: select.options[select.selectedIndex].text,
           artist: 'Rádio Web',
-          album: 'M3U Player',
+          album: 'M3U Player'
         });
       }
     }
 
     function playStation(url, name = "") {
       clearTimeout(reconnectTimeout);
-      clearTimeout(bufferTimeout); // Limpa o timeout de buffer caso o áudio comece rapidamente
+      clearTimeout(bufferTimeout);
       player.src = url;
       player.load();
 
-      // Monitorando o tempo de buffer
       bufferTimeout = setTimeout(() => {
         buffering.textContent = "⏳ Carregando buffer...";
-      }, BUFFER_TIME); // Exibe mensagem após 10 segundos
+      }, BUFFER_TIME);
 
       player.play().then(() => {
         playPauseBtn.textContent = "⏸️ Pausar";
+        status.textContent = `🔊 Tocando: ${name}`;
+        isManuallyPaused = false;
         updateMetadata();
       }).catch(err => {
         console.error("Erro ao tocar:", err);
@@ -135,11 +137,15 @@
     function scheduleReconnect() {
       clearTimeout(reconnectTimeout);
       reconnectTimeout = setTimeout(() => {
-        status.textContent = "🔁 Reconectando...";
-        player.load();
-        player.play().catch(() => {
-          scheduleReconnect();
-        });
+        if (!isManuallyPaused) {
+          status.textContent = "🔁 Reconectando...";
+          player.load();
+          player.play().catch(() => {
+            scheduleReconnect();
+          });
+        } else {
+          status.textContent = "⏸️ Pausado";
+        }
       }, 5000);
     }
 
@@ -172,9 +178,12 @@
 
     playPauseBtn.addEventListener('click', () => {
       if (player.paused) {
+        isManuallyPaused = false;
         player.play();
         playPauseBtn.textContent = "⏸️ Pausar";
+        status.textContent = `🔊 Tocando: ${select.options[select.selectedIndex].text}`;
       } else {
+        isManuallyPaused = true;
         player.pause();
         playPauseBtn.textContent = "▶️ Tocar";
         status.textContent = "⏸️ Pausado";
@@ -183,8 +192,8 @@
 
     player.addEventListener('playing', () => {
       status.textContent = `🔊 Tocando: ${select.options[select.selectedIndex].text}`;
-      clearTimeout(bufferTimeout); // Cancela o "buffering" caso o áudio comece a tocar
-      buffering.textContent = ""; // Limpa a mensagem de "buffering"
+      clearTimeout(bufferTimeout);
+      buffering.textContent = "";
     });
 
     player.addEventListener('waiting', () => {
@@ -192,17 +201,19 @@
     });
 
     player.addEventListener('canplay', () => {
-      buffering.textContent = ""; // Limpa a mensagem quando estiver pronto
+      buffering.textContent = "";
     });
 
     ['error', 'stalled', 'ended'].forEach(event => {
       player.addEventListener(event, () => {
-        status.textContent = "⚠️ Erro de reprodução. Tentando reconectar...";
-        scheduleReconnect();
+        if (!isManuallyPaused) {
+          status.textContent = "⚠️ Erro de reprodução. Tentando reconectar...";
+          scheduleReconnect();
+        }
       });
     });
 
-    // Primeira estação ao carregar
+    // Iniciar primeira estação
     const firstName = select.options[select.selectedIndex].text;
     playStation(select.value, firstName);
 
