--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
         navigator.mediaSession.metadata = new MediaMetadata({
           title: select.options[select.selectedIndex].text,
           artist: 'Rádio Web',
-          album: 'M3U Player'
+          album: 'M3U Player',
+          artwork: [
+            { src: 'image/original.png', sizes: '348x348', type: 'image/png' }
+          ]
         });
       }
     }
