Revert "Atualizações realizadas"
This reverts commit 83a783aae8ae1bbd7a4f7220e05cac39d715b62e.

--- a/index.html
+++ b/index.html
@@ -107,10 +107,7 @@
         navigator.mediaSession.metadata = new MediaMetadata({
           title: select.options[select.selectedIndex].text,
           artist: 'Rádio Web',
-          album: 'M3U Player',
-          artwork: [
-            { src: 'image/original.png', sizes: '348x348', type: 'image/png' }
-          ]
+          album: 'M3U Player'
         });
       }
     }
