--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rádio M3U -Teste</title>
+  <title>Rádio M3U</title>
   <link rel="manifest" href="manifest.json" />
   <link rel="apple-touch-icon" href="image/icon.png" />
   <link rel="icon" href="image/favicon.ico" type="image/x-icon">
@@ -96,7 +96,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🎧 Rádio M3U</h1>
+    <h1>🎧 Rádio M3U - Teste</h1>
     <select id="stationSelect">
       <option value="https://stream.geracao.live/listen/rock/stream">Geração Rock</option>
       <option value="https://centova.euroti.com.br:20015/stream">Rádio Exmera</option>
