--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🎧 Rádio M3U - Teste</h1>
+    <h1>🎧 Rádio M3U</h1>
     <select id="stationSelect">
       <option value="https://stream.geracao.live/listen/rock/stream">Geração Rock</option>
       <option value="https://centova.euroti.com.br:20015/stream">Rádio Exmera</option>
