--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
       font-size: 1.2rem;
       color: var(--buffering-color);
     }
-  </style>
-  
+  </style>  
   
   
 </head>
@@ -94,7 +93,7 @@
       <option value="https://player.ipstm.net/proxy/32224">Metal Zone Radio</option>
       <option value="https://skywatcherawakenedradio.radiolebowski.com/play">Trap Radio</option>
       <option value="http://serv.coreradio.online:8000/coreradio">Core Radio</option>
-      <option value="http://streams.radiobob.de/metalcore/mp3-128">RADIO BOB - Metal</option>
+      <option value="https://streams.radiobob.de/metalcore/mp3-128">RADIO BOB - Metal</option>
       <option value="https://rrdns-dumont.webnow.com.br/dumont.aac">Dumont FM - 104.3</option>
     </select>
     
