--- a/index.html
+++ b/index.html
@@ -92,11 +92,12 @@
       <option value="https://playerservices.streamtheworld.com/api/livestream-redirect/RADIO_89FM_ADP.aac">Rádio 89 FM Rock</option>
       <option value="https://player.ipstm.net/proxy/32224">Metal Zone Radio</option>
       <option value="https://skywatcherawakenedradio.radiolebowski.com/play">Trap Radio</option>
-      <option value="http://serv.coreradio.online:8000/coreradio">Core Radio</option>
       <option value="https://streams.radiobob.de/metalcore/mp3-128">RADIO BOB - Metal</option>
       <option value="https://rrdns-dumont.webnow.com.br/dumont.aac">Dumont FM - 104.3</option>
     </select>
     
+      <!-- <option value="http://serv.coreradio.online:8000/coreradio">Core Radio</option> -->
+
     <button id="playPauseBtn">⏸️ Pausar</button>
     <p id="status">🔊 Tocando: Metalcore</p>
     <p id="buffering"></p>
