--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     playStation(select.value, firstName);
 
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('public/service-worker.js');
+      navigator.serviceWorker.register('service-worker.js');
     }
   </script>
 </body>
