--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="manifest" href="manifest.json" />
   <link rel="apple-touch-icon" href="image/icon.png" />
   <link rel="icon" href="image/favicon.ico" type="image/x-icon">
-  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="mobile-web-app-capable" content="yes" />
   
   <style>
     :root {
