Atualizações para hls.js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon" href="image/icon.png" />
   <link rel="icon" href="image/favicon.ico" type="image/x-icon">
   <meta name="mobile-web-app-capable" content="yes" />
-  
+
   <style>
     :root {
       --bg-color: #121212;
@@ -19,7 +19,6 @@
       --status-color: #ccc;
       --buffering-color: yellow;
     }
-  
     body {
       background: var(--bg-color);
       color: var(--text-color);
@@ -30,7 +29,6 @@
       align-items: center;
       height: 100vh;
     }
-  
     .container {
       text-align: center;
       max-width: 400px;
@@ -40,12 +38,10 @@
       border-radius: 10px;
       box-shadow: 0 0 10px #00000050;
     }
-  
     h1 {
       color: var(--button-bg);
       margin-bottom: 1rem;
     }
-  
     select {
       width: 100%;
       padding: 0.6rem;
@@ -54,7 +50,6 @@
       border-radius: 5px;
       font-size: 1rem;
     }
-  
     button {
       background-color: var(--button-bg);
       color: white;
@@ -64,24 +59,22 @@
       border-radius: 5px;
       cursor: pointer;
     }
-  
     button:hover {
       background-color: var(--button-hover);
     }
-  
     #status {
       margin-top: 1rem;
       font-size: 0.9rem;
       color: var(--status-color);
     }
-  
     #buffering {
       font-size: 1.2rem;
       color: var(--buffering-color);
     }
-  </style>  
-  
-  
+  </style>
+
+  <!-- Hls.js para tocar streams m3u8 -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/hls.js/1.5.14/hls.min.js"></script>
 </head>
 <body>
   <div class="container">
@@ -94,7 +87,7 @@
       <option value="https://player.ipstm.net/proxy/32224">Metal Zone Radio</option>
       <option value="https://skywatcherawakenedradio.radiolebowski.com/play">Trap Radio</option>
       <option value="https://streams.radiobob.de/metalcore/mp3-128">RADIO BOB - Metal</option>
-      <!-- <option value="http://serv.coreradio.online:8000/coreradio">Core Radio</option> -->
+      <option value="https://a.files.bbci.co.uk/ms6/live/3441A116-B12E-4D2F-ACA8-C1984642FA4B/audio/simulcast/hls/nonuk/pc_hd_abr_v2/cfs/bbc_world_service.m3u8">BBC World Service</option>
     </select>
 
     <button id="playPauseBtn">⏸️ Pausar</button>
@@ -114,6 +107,7 @@
     let bufferTimeout;
     const BUFFER_TIME = 10000;
     let isManuallyPaused = false;
+    let hls;
 
     function updateMetadata() {
       if ('mediaSession' in navigator) {
@@ -131,7 +125,21 @@
     function playStation(url, name = "") {
       clearTimeout(reconnectTimeout);
       clearTimeout(bufferTimeout);
-      player.src = url;
+
+      if (hls) {
+        hls.destroy();
+        hls = null;
+      }
+
+      // Se for m3u8 e navegador suportar Hls.js
+      if (url.endsWith(".m3u8") && Hls.isSupported()) {
+        hls = new Hls();
+        hls.loadSource(url);
+        hls.attachMedia(player);
+      } else {
+        player.src = url;
+      }
+
       player.load();
 
       bufferTimeout = setTimeout(() => {
