--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <option value="https://streams.radiobob.de/metalcore/mp3-128">RADIO BOB - Metal</option>
       <option value="https://rrdns-dumont.webnow.com.br/dumont.aac">Dumont FM - 104.3</option>
       <option value="https://maximum-dark.hostingradio.ru/maxdark96.aacp">Radio Maximum Emo</option>
-      <!-- <option value="http://serv.coreradio.online:8000/coreradio">Core Radio</option> -->
+      <option value="http://serv.coreradio.online:8000/coreradio">Core Radio</option>
     </select>
 
     <button id="playPauseBtn">⏸️ Pausar</button>
