--- a/index.html
+++ b/index.html
@@ -1,243 +1,282 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rádio M3U</title>
-  <link rel="manifest" href="manifest.json" />
-  <link rel="apple-touch-icon" href="image/icon.png" />
-  <link rel="icon" href="image/favicon.ico" type="image/x-icon">
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  
-  <style>
-    :root {
-      --bg-color: #121212;
-      --text-color: #ffffff;
-      --container-bg: #1e1e1e;
-      --button-bg: #1DB954;
-      --button-hover: #17a64a;
-      --status-color: #ccc;
-      --buffering-color: yellow;
-    }
-  
-    body {
-      background: var(--bg-color);
-      color: var(--text-color);
-      font-family: Arial, sans-serif;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-  
-    .container {
-      text-align: center;
-      max-width: 400px;
-      width: 90%;
-      padding: 2rem;
-      background: var(--container-bg);
-      border-radius: 10px;
-      box-shadow: 0 0 10px #00000050;
-    }
-  
-    h1 {
-      color: var(--button-bg);
-      margin-bottom: 1rem;
-    }
-  
-    select {
-      width: 100%;
-      padding: 0.6rem;
-      margin-bottom: 1rem;
-      border: none;
-      border-radius: 5px;
-      font-size: 1rem;
-    }
-  
-    button {
-      background-color: var(--button-bg);
-      color: white;
-      border: none;
-      padding: 0.6rem 1.2rem;
-      font-size: 1.2rem;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-  
-    button:hover {
-      background-color: var(--button-hover);
-    }
-  
-    #status {
-      margin-top: 1rem;
-      font-size: 0.9rem;
-      color: var(--status-color);
-    }
-  
-    #buffering {
-      font-size: 1.2rem;
-      color: var(--buffering-color);
-    }
-  </style>  
-  
-  
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Rádio M3U</title>
+
+<link rel="manifest" href="manifest.json" />
+<link rel="apple-touch-icon" href="image/icon.png" />
+<link rel="icon" href="image/favicon.ico" type="image/x-icon">
+<meta name="apple-mobile-web-app-capable" content="yes" />
+
+<style>
+:root {
+  --bg:#121212;
+  --text:#ffffff;
+  --card:#1e1e1e;
+  --primary:#1DB954;
+  --primary-hover:#17a64a;
+  --muted:#ccc;
+  --grid:#2a2a2a;
+}
+
+[data-theme="light"] {
+  --bg:#f5f6fa;
+  --text:#111;
+  --card:#ffffff;
+  --primary:#0a58ca;
+  --primary-hover:#084298;
+  --muted:#555;
+  --grid:#ddd;
+}
+
+body {
+  margin:0;
+  font-family:Arial, sans-serif;
+  background:var(--bg);
+  color:var(--text);
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  height:100vh;
+}
+
+.container {
+  max-width:420px;
+  width:90%;
+  padding:2rem;
+  background:var(--card);
+  border-radius:12px;
+  box-shadow:0 0 12px #00000040;
+  text-align:center;
+}
+
+header {
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  margin-bottom:1rem;
+}
+
+h1 {
+  color:var(--primary);
+  margin:0;
+}
+
+.theme-btn {
+  background:none;
+  border:none;
+  font-size:1.4rem;
+  cursor:pointer;
+  color:var(--text);
+}
+
+select {
+  width:100%;
+  padding:.6rem;
+  margin-bottom:1rem;
+  border-radius:6px;
+  border:none;
+}
+
+button {
+  background:var(--primary);
+  color:#fff;
+  border:none;
+  padding:.6rem 1.2rem;
+  font-size:1.1rem;
+  border-radius:6px;
+  cursor:pointer;
+}
+
+button:hover { background:var(--primary-hover); }
+
+#status, #buffering, #dataUsage {
+  font-size:.85rem;
+  margin-top:6px;
+  color:var(--muted);
+}
+
+canvas {
+  margin-top:12px;
+  width:100%;
+  height:120px;
+  background:transparent;
+}
+</style>
 </head>
+
 <body>
-  <div class="container">
+<div class="container">
+  <header>
     <h1>🎧 Rádio M3U</h1>
-    <select id="stationSelect">
-      <option value="https://stream.geracao.live/listen/rock/stream">Geração Rock</option>
-      <option value="https://playerservices.streamtheworld.com/api/livestream-redirect/RADIO_ALPHAFM_ADP.aac">Alpha FM</option>
-      <option value="https://playerservices.streamtheworld.com/api/livestream-redirect/RADIO_89FM_ADP.aac">Rádio 89 FM Rock</option>
-      <option value="https://player.ipstm.net/proxy/32224">Metal Zone Radio</option>
-      <option value="https://skywatcherawakenedradio.radiolebowski.com/play">Trap Radio</option>
-      <option value="https://streams.radiobob.de/metalcore/mp3-128">RADIO BOB - Metal</option>
-      <option value="https://rrdns-dumont.webnow.com.br/dumont.aac">Dumont FM - 104.3</option>
-      <option value="https://maximum-dark.hostingradio.ru/maxdark96.aacp">Radio Maximum Emo</option>
-      <option value="https://coreradio.ru/radio">Core Radio</option>
-    </select>
+    <button id="themeToggle" class="theme-btn">🌙</button>
+  </header>
 
-    <button id="playPauseBtn">⏸️ Pausar</button>
-    <p id="status">🔊 Tocando: Metalcore</p>
-    <p id="buffering"></p>
+  <select id="stationSelect">
+    <option value="https://stream.geracao.live/listen/rock/stream">Geração Rock</option>
+    <option value="https://playerservices.streamtheworld.com/api/livestream-redirect/RADIO_89FM_ADP.aac">Rádio 89 FM Rock</option>
+    <option value="https://streams.radiobob.de/metalcore/mp3-128">RADIO BOB - Metal</option>
+    <option value="https://maximum-dark.hostingradio.ru/maxdark96.aacp">Radio Maximum Emo</option>
+  </select>
 
-    <audio id="audioPlayer" preload="auto"></audio>
-  </div>
+  <button id="playPauseBtn">⏸️ Pausar</button>
 
-  <script>
-    const select = document.getElementById('stationSelect');
-    const player = document.getElementById('audioPlayer');
-    const status = document.getElementById('status');
-    const playPauseBtn = document.getElementById('playPauseBtn');
-    const buffering = document.getElementById('buffering');
-    let reconnectTimeout;
-    let bufferTimeout;
-    const BUFFER_TIME = 10000;
-    let isManuallyPaused = false;
+  <div id="status">🔊 Conectando...</div>
+  <div id="buffering"></div>
+  <div id="dataUsage">📶 Dados usados: 0.00 MB</div>
 
-    function updateMetadata() {
-      if ('mediaSession' in navigator) {
-        navigator.mediaSession.metadata = new MediaMetadata({
-          title: select.options[select.selectedIndex].text,
-          artist: 'Rádio Web',
-          album: 'M3U Player',
-          artwork: [
-            { src: 'image/original.png', sizes: '348x348', type: 'image/png' }
-          ]
-        });
-      }
+  <canvas id="usageChart" width="360" height="120"></canvas>
+
+  <audio id="audioPlayer" preload="auto"></audio>
+</div>
+
+<script>
+/* ===== ELEMENTOS ===== */
+const select = document.getElementById("stationSelect");
+const player = document.getElementById("audioPlayer");
+const status = document.getElementById("status");
+const buffering = document.getElementById("buffering");
+const dataUsage = document.getElementById("dataUsage");
+const playPauseBtn = document.getElementById("playPauseBtn");
+const themeToggle = document.getElementById("themeToggle");
+const canvas = document.getElementById("usageChart");
+const ctx = canvas.getContext("2d");
+
+/* ===== TEMA ===== */
+const savedTheme = localStorage.getItem("theme-radio") || "dark";
+document.documentElement.setAttribute("data-theme", savedTheme);
+themeToggle.textContent = savedTheme === "dark" ? "☀️" : "🌙";
+
+themeToggle.onclick = () => {
+  const next = document.documentElement.getAttribute("data-theme") === "dark" ? "light" : "dark";
+  document.documentElement.setAttribute("data-theme", next);
+  localStorage.setItem("theme-radio", next);
+  themeToggle.textContent = next === "dark" ? "☀️" : "🌙";
+};
+
+/* ===== CONSUMO DE DADOS ===== */
+let playbackSeconds = 0;
+let dataInterval;
+let estimatedKbps = 128;
+let usageHistory = [];
+
+function detectBitrate(url) {
+  if (url.includes(".aac")) return 128;
+  if (url.includes("mp3")) return 128;
+  if (url.includes("ogg")) return 96;
+  return 128;
+}
+
+function startDataCounter() {
+  clearInterval(dataInterval);
+  estimatedKbps = detectBitrate(select.value);
+
+  dataInterval = setInterval(() => {
+    if (!player.paused && !player.ended) {
+      playbackSeconds++;
+      const mb = (estimatedKbps * playbackSeconds) / 8 / 1024;
+      dataUsage.textContent = `📶 Dados usados: ${mb.toFixed(2)} MB`;
+      usageHistory.push(mb);
+      if (usageHistory.length > 60) usageHistory.shift();
+      drawChart();
     }
+  }, 1000);
+}
 
-    function playStation(url, name = "") {
-      clearTimeout(reconnectTimeout);
-      clearTimeout(bufferTimeout);
-      player.src = url;
-      player.load();
+function stopDataCounter() {
+  clearInterval(dataInterval);
+}
 
-      bufferTimeout = setTimeout(() => {
-        buffering.textContent = "⏳ Carregando buffer...";
-      }, BUFFER_TIME);
+/* ===== GRÁFICO ===== */
+function drawChart() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-      player.play().then(() => {
-        playPauseBtn.textContent = "⏸️ Pausar";
-        status.textContent = `🔊 Tocando: ${name}`;
-        isManuallyPaused = false;
-        updateMetadata();
-      }).catch(err => {
-        console.error("Erro ao tocar:", err);
-        status.textContent = "⚠️ Erro ao tocar. Tentando novamente...";
-        scheduleReconnect();
-      });
-    }
+  const max = Math.max(...usageHistory, 1);
+  ctx.strokeStyle = getComputedStyle(document.documentElement)
+    .getPropertyValue("--primary");
 
-    function scheduleReconnect() {
-      clearTimeout(reconnectTimeout);
-      reconnectTimeout = setTimeout(() => {
-        if (!isManuallyPaused) {
-          status.textContent = "🔁 Reconectando...";
-          player.load();
-          player.play().catch(() => {
-            scheduleReconnect();
-          });
-        } else {
-          status.textContent = "⏸️ Pausado";
-        }
-      }, 5000);
-    }
+  ctx.beginPath();
+  usageHistory.forEach((v, i) => {
+    const x = (i / 59) * canvas.width;
+    const y = canvas.height - (v / max) * canvas.height;
+    if (i === 0) ctx.moveTo(x, y);
+    else ctx.lineTo(x, y);
+  });
+  ctx.stroke();
+}
 
-    function changeStation(direction) {
-      const total = select.options.length;
-      let currentIndex = select.selectedIndex;
-      let newIndex = currentIndex + direction;
+/* ===== PLAYER ===== */
+let reconnectTimeout;
+const BUFFER_TIME = 4000;
+let isManuallyPaused = false;
 
-      if (newIndex < 0) newIndex = total - 1;
-      if (newIndex >= total) newIndex = 0;
+function updateStatus() {
+  const name = select.options[select.selectedIndex].text;
+  status.textContent = `🔊 Tocando: ${name}`;
+}
 
-      select.selectedIndex = newIndex;
-      const name = select.options[newIndex].text;
-      playStation(select.value, name);
-    }
+function playStation() {
+  clearTimeout(reconnectTimeout);
+  player.src = select.value;
 
-    if ('mediaSession' in navigator) {
-      navigator.mediaSession.setActionHandler('previoustrack', () => {
-        changeStation(-1);
-      });
-      navigator.mediaSession.setActionHandler('nexttrack', () => {
-        changeStation(1);
-      });
-    }
+  setTimeout(() => buffering.textContent = "⏳ Buffering...", BUFFER_TIME);
 
-    select.addEventListener('change', () => {
-      const name = select.options[select.selectedIndex].text;
-      playStation(select.value, name);
-    });
+  player.play().then(() => {
+    isManuallyPaused = false;
+    playPauseBtn.textContent = "⏸️ Pausar";
+    updateStatus();
+  }).catch(scheduleReconnect);
+}
 
-    playPauseBtn.addEventListener('click', () => {
-      if (player.paused) {
-        isManuallyPaused = false;
-        player.play();
-        playPauseBtn.textContent = "⏸️ Pausar";
-        status.textContent = `🔊 Tocando: ${select.options[select.selectedIndex].text}`;
-      } else {
-        isManuallyPaused = true;
-        player.pause();
-        playPauseBtn.textContent = "▶️ Tocar";
-        status.textContent = "⏸️ Pausado";
-      }
-    });
+function scheduleReconnect() {
+  if (isManuallyPaused) return;
+  reconnectTimeout = setTimeout(() => {
+    status.textContent = "🔁 Reconectando...";
+    player.play().catch(scheduleReconnect);
+  }, 5000);
+}
 
-    player.addEventListener('playing', () => {
-      status.textContent = `🔊 Tocando: ${select.options[select.selectedIndex].text}`;
-      clearTimeout(bufferTimeout);
-      buffering.textContent = "";
-    });
+/* ===== EVENTOS ===== */
+select.onchange = () => {
+  playbackSeconds = 0;
+  usageHistory = [];
+  dataUsage.textContent = "📶 Dados usados: 0.00 MB";
+  playStation();
+};
 
-    player.addEventListener('waiting', () => {
-      buffering.textContent = "⏳ Carregando buffer...";
-    });
+playPauseBtn.onclick = () => {
+  if (player.paused) {
+    isManuallyPaused = false;
+    player.play();
+    playPauseBtn.textContent = "⏸️ Pausar";
+    updateStatus();
+  } else {
+    isManuallyPaused = true;
+    player.pause();
+    playPauseBtn.textContent = "▶️ Tocar";
+    status.textContent = "⏸️ Pausado";
+  }
+};
 
-    player.addEventListener('canplay', () => {
-      buffering.textContent = "";
-    });
+player.addEventListener("playing", () => {
+  buffering.textContent = "";
+  updateStatus();
+  startDataCounter();
+});
 
-    ['error', 'stalled', 'ended'].forEach(event => {
-      player.addEventListener(event, () => {
-        if (!isManuallyPaused) {
-          status.textContent = "⚠️ Erro de reprodução. Tentando reconectar...";
-          scheduleReconnect();
-        }
-      });
-    });
+player.addEventListener("pause", stopDataCounter);
+player.addEventListener("waiting", () => buffering.textContent = "⏳ Buffering...");
+["error","ended","stalled"].forEach(e =>
+  player.addEventListener(e, () => {
+    stopDataCounter();
+    if (!isManuallyPaused) scheduleReconnect();
+  })
+);
 
-    // Iniciar primeira estação
-    const firstName = select.options[select.selectedIndex].text;
-    playStation(select.value, firstName);
-
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/services-worker.js');
-    }
-  </script>
+/* ===== INIT ===== */
+playStation();
+</script>
 </body>
 </html>
