--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rádio M3U</title>
-
   <link rel="manifest" href="manifest.json" />
   <link rel="apple-touch-icon" href="image/icon.png" />
   <link rel="icon" href="image/favicon.ico" type="image/x-icon">
   <meta name="apple-mobile-web-app-capable" content="yes" />
-
+  
   <style>
     :root {
       --bg-color: #121212;
@@ -20,17 +20,7 @@
       --status-color: #ccc;
       --buffering-color: yellow;
     }
-
-    [data-theme="light"] {
-      --bg-color: #f5f6fa;
-      --text-color: #111;
-      --container-bg: #ffffff;
-      --button-bg: #0a58ca;
-      --button-hover: #084298;
-      --status-color: #555;
-      --buffering-color: #c59f00;
-    }
-
+  
     body {
       background: var(--bg-color);
       color: var(--text-color);
@@ -41,7 +31,7 @@
       align-items: center;
       height: 100vh;
     }
-
+  
     .container {
       text-align: center;
       max-width: 400px;
@@ -51,27 +41,12 @@
       border-radius: 10px;
       box-shadow: 0 0 10px #00000050;
     }
-
-    .top {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 1rem;
-    }
-
+  
     h1 {
       color: var(--button-bg);
-      margin: 0;
+      margin-bottom: 1rem;
     }
-
-    .theme-btn {
-      background: none;
-      border: none;
-      font-size: 1.4rem;
-      cursor: pointer;
-      color: var(--text-color);
-    }
-
+  
     select {
       width: 100%;
       padding: 0.6rem;
@@ -80,7 +55,7 @@
       border-radius: 5px;
       font-size: 1rem;
     }
-
+  
     button {
       background-color: var(--button-bg);
       color: white;
@@ -90,37 +65,28 @@
       border-radius: 5px;
       cursor: pointer;
     }
-
+  
     button:hover {
       background-color: var(--button-hover);
     }
-
+  
     #status {
       margin-top: 1rem;
       font-size: 0.9rem;
       color: var(--status-color);
     }
-
+  
     #buffering {
       font-size: 1.2rem;
       color: var(--buffering-color);
     }
-
-    #dataUsage {
-      margin-top: 6px;
-      font-size: 0.85rem;
-      color: var(--status-color);
-    }
-  </style>
+  </style>  
+  
+  
 </head>
-
 <body>
   <div class="container">
-    <div class="top">
-      <h1>🎧 Rádio M3U</h1>
-      <button id="themeToggle" class="theme-btn">🌙</button>
-    </div>
-
+    <h1>🎧 Rádio M3U</h1>
     <select id="stationSelect">
       <option value="https://stream.geracao.live/listen/rock/stream">Geração Rock</option>
       <option value="https://playerservices.streamtheworld.com/api/livestream-redirect/RADIO_ALPHAFM_ADP.aac">Alpha FM</option>
@@ -134,29 +100,144 @@
     </select>
 
     <button id="playPauseBtn">⏸️ Pausar</button>
-
-    <p id="status">🔊 Conectando...</p>
+    <p id="status">🔊 Tocando: Metalcore</p>
     <p id="buffering"></p>
-    <div id="dataUsage">📶 Dados usados: 0.00 MB</div>
 
     <audio id="audioPlayer" preload="auto"></audio>
   </div>
 
   <script>
-    /* ===== TEMA CLARO / ESCURO ===== */
-    const themeToggle = document.getElementById("themeToggle");
-    const savedTheme = localStorage.getItem("radio-theme") || "dark";
+    const select = document.getElementById('stationSelect');
+    const player = document.getElementById('audioPlayer');
+    const status = document.getElementById('status');
+    const playPauseBtn = document.getElementById('playPauseBtn');
+    const buffering = document.getElementById('buffering');
+    let reconnectTimeout;
+    let bufferTimeout;
+    const BUFFER_TIME = 10000;
+    let isManuallyPaused = false;
 
-    document.documentElement.setAttribute("data-theme", savedTheme);
-    themeToggle.textContent = savedTheme === "dark" ? "☀️" : "🌙";
+    function updateMetadata() {
+      if ('mediaSession' in navigator) {
+        navigator.mediaSession.metadata = new MediaMetadata({
+          title: select.options[select.selectedIndex].text,
+          artist: 'Rádio Web',
+          album: 'M3U Player',
+          artwork: [
+            { src: 'image/original.png', sizes: '348x348', type: 'image/png' }
+          ]
+        });
+      }
+    }
 
-    themeToggle.addEventListener("click", () => {
-      const current = document.documentElement.getAttribute("data-theme");
-      const next = current === "dark" ? "light" : "dark";
-      document.documentElement.setAttribute("data-theme", next);
-      localStorage.setItem("radio-theme", next);
-      themeToggle.textContent = next === "dark" ? "☀️" : "🌙";
+    function playStation(url, name = "") {
+      clearTimeout(reconnectTimeout);
+      clearTimeout(bufferTimeout);
+      player.src = url;
+      player.load();
+
+      bufferTimeout = setTimeout(() => {
+        buffering.textContent = "⏳ Carregando buffer...";
+      }, BUFFER_TIME);
+
+      player.play().then(() => {
+        playPauseBtn.textContent = "⏸️ Pausar";
+        status.textContent = `🔊 Tocando: ${name}`;
+        isManuallyPaused = false;
+        updateMetadata();
+      }).catch(err => {
+        console.error("Erro ao tocar:", err);
+        status.textContent = "⚠️ Erro ao tocar. Tentando novamente...";
+        scheduleReconnect();
+      });
+    }
+
+    function scheduleReconnect() {
+      clearTimeout(reconnectTimeout);
+      reconnectTimeout = setTimeout(() => {
+        if (!isManuallyPaused) {
+          status.textContent = "🔁 Reconectando...";
+          player.load();
+          player.play().catch(() => {
+            scheduleReconnect();
+          });
+        } else {
+          status.textContent = "⏸️ Pausado";
+        }
+      }, 5000);
+    }
+
+    function changeStation(direction) {
+      const total = select.options.length;
+      let currentIndex = select.selectedIndex;
+      let newIndex = currentIndex + direction;
+
+      if (newIndex < 0) newIndex = total - 1;
+      if (newIndex >= total) newIndex = 0;
+
+      select.selectedIndex = newIndex;
+      const name = select.options[newIndex].text;
+      playStation(select.value, name);
+    }
+
+    if ('mediaSession' in navigator) {
+      navigator.mediaSession.setActionHandler('previoustrack', () => {
+        changeStation(-1);
+      });
+      navigator.mediaSession.setActionHandler('nexttrack', () => {
+        changeStation(1);
+      });
+    }
+
+    select.addEventListener('change', () => {
+      const name = select.options[select.selectedIndex].text;
+      playStation(select.value, name);
     });
+
+    playPauseBtn.addEventListener('click', () => {
+      if (player.paused) {
+        isManuallyPaused = false;
+        player.play();
+        playPauseBtn.textContent = "⏸️ Pausar";
+        status.textContent = `🔊 Tocando: ${select.options[select.selectedIndex].text}`;
+      } else {
+        isManuallyPaused = true;
+        player.pause();
+        playPauseBtn.textContent = "▶️ Tocar";
+        status.textContent = "⏸️ Pausado";
+      }
+    });
+
+    player.addEventListener('playing', () => {
+      status.textContent = `🔊 Tocando: ${select.options[select.selectedIndex].text}`;
+      clearTimeout(bufferTimeout);
+      buffering.textContent = "";
+    });
+
+    player.addEventListener('waiting', () => {
+      buffering.textContent = "⏳ Carregando buffer...";
+    });
+
+    player.addEventListener('canplay', () => {
+      buffering.textContent = "";
+    });
+
+    ['error', 'stalled', 'ended'].forEach(event => {
+      player.addEventListener(event, () => {
+        if (!isManuallyPaused) {
+          status.textContent = "⚠️ Erro de reprodução. Tentando reconectar...";
+          scheduleReconnect();
+        }
+      });
+    });
+
+    // Iniciar primeira estação
+    const firstName = select.options[select.selectedIndex].text;
+    playStation(select.value, firstName);
+
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/services-worker.js');
+    }
   </script>
 </body>
 </html>
