--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🎧 Rádio M3UU</h1>
+    <h1>🎧 Rádio M3U</h1>
     <select id="stationSelect">
       <option value="https://stream.geracao.live/listen/rock/stream">Geração Rock</option>
       <option value="https://playerservices.streamtheworld.com/api/livestream-redirect/RADIO_ALPHAFM_ADP.aac">Alpha FM</option>
